test: Explicitly allow dynamic agent loading